--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-lg-4 photo-bg"></div>
             <div class="col-lg-8 card">
                 <h1>Hello，我是官仁有话说</h1>
-                <p>目前从事互联网保险行业，供职于<a href="https://www.sdbao.com/" target="_blank">水滴保险商城</a>；念念不忘，必有回响；从没为什么努力过，积极、自信、大胆、乐观，为你而变。 </p>
+                <p>风萧萧兮，白露未晞；念念不忘，必有回响；从没为什么努力过，积极、自信、大胆、乐观，为你而变。 </p>
                 <p>苦难没有认清，爱也没有学会；<br>Hope you still love life after you know a lot .<br>希望你懂得很多之后，依旧热爱生活（｡ӧ◡ӧ｡）
                 </p>
 
@@ -43,8 +43,8 @@
                 </ul>
                 <footer>
                     <p>© 2020 <a href="http://beian.miit.gov.cn/" target="_blank">蜀ICP备17029447号-3</a>
-                        <br>© 阿洁
-                        <a href="https://uycool.com/" target="_blank" rel="nofollow">今夜は月が绮丽ですね</a>
+                        <br>© 阿婕
+                        <a href="https://uycool.com/" target="_blank" rel="nofollow">今夜的月色很美</a>
                         <script type="text/javascript" src="https://js.users.51.la/20852499.js"></script>
                     </p>
                     </p>
