--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                 <p>Just Go Go ···</p>
                 <div class="row">
                     <button id="kaygb-blog" class="btn btn-primary col-lg-4">首页</button>
-                    <a href="https://uycool.com" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">首页</a>
-                    <a href="https://weibo.com/u/3395283564" target="_blank" class="btn btn-secondary col-lg-4">微博</a>
+                    <a href="https://www.uycool.com" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">首页</a>
+                    <a href="https://uycool.com" target="_blank" class="btn btn-secondary col-lg-4">个站</a>
                     <a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=uycool@qq.com" target="_blank" id="kaygb-mail-a" class="btn btn-success col-lg-4">邮箱</a>
                     <button id="kaygb-mail" class="btn btn-success col-lg-4">邮箱</button>
                 </div>
@@ -36,16 +36,15 @@
                 <h4 class="mt-4">下面也有我的足迹哦</h4>
                 <ul class="social mt-1">
                     <li><a href="tencent://message/?uin=458091312&Site=uycool.com&Menu=yes" target="blank"><i class="fab fa-qq" aria-hidden="true"></i></a></li>
-                    <li><a href="http://wallpaper.uycool.com" target="blank"><i class="fab fa-weixin" aria-hidden="true"></i></a></li>
-                    <li><a href="https://weibo.com/u/3395283564" target="blank"><i class="fab fa-weibo " aria-hidden="true"></i></a></li>
+                    <li><a href="https://uycool.com" target="blank"><i class="fab fa-weixin" aria-hidden="true"></i></a></li>
+                    <li><a href="http://sdbao.typecho.space" target="blank"><i class="fab fa-weibo " aria-hidden="true"></i></a></li>
                     <li><a href="https://github.com/iguanren" target="blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="https://500px.com.cn/uycool" target="blank"><i class="fab fa-500px" aria-hidden="true"></i></a></li>
                 </ul>
                 <footer>
                     <p>© 2020 <a href="http://beian.miit.gov.cn/" target="_blank">蜀ICP备17029447号-3</a>
                         <br>© 阿婕
-                        <a href="https://uycool.com/" target="_blank" rel="nofollow">今夜的月色很美</a>
-                        <script type="text/javascript" src="https://js.users.51.la/20852499.js"></script>
+                        <a href="https://uycool.com/" target="_blank" rel="nofollow">丿所有不安终将消散</a>
                     </p>
                     </p>
 
