--- a/index.html
+++ b/index.html
@@ -33,16 +33,15 @@
                     <button id="kaygb-mail" class="btn btn-success col-lg-4">邮箱</button>
                 </div>
 
-                <h4 class="mt-4">下面也有我的足迹哦</h4>
+                <h4 class="mt-4">这里也能找到我</h4>
                 <ul class="social mt-1">
                     <li><a href="tencent://message/?uin=458091312&Site=uycool.com&Menu=yes" target="blank"><i class="fab fa-qq" aria-hidden="true"></i></a></li>
-                    <li><a href="https://uycool.com" target="blank"><i class="fab fa-weixin" aria-hidden="true"></i></a></li>
-                    <li><a href="http://sdbao.typecho.space" target="blank"><i class="fab fa-weibo " aria-hidden="true"></i></a></li>
+                    <li><a href="http://sdbao.typecho.space" target="blank"><i class="fab fa-weixin" aria-hidden="true"></i></a></li>
                     <li><a href="https://github.com/iguanren" target="blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="https://500px.com.cn/uycool" target="blank"><i class="fab fa-500px" aria-hidden="true"></i></a></li>
                 </ul>
                 <footer>
-                    <p>© 2020 <a href="http://beian.miit.gov.cn/" target="_blank">蜀ICP备17029447号-3</a>
+                    <p>© 2020 <a href="http://beian.miit.gov.cn/" target="_blank">蜀ICP备17029447号</a>
                         <br>© 阿婕
                         <a href="https://uycool.com/" target="_blank" rel="nofollow">丿所有不安终将消散</a>
                     </p>
