--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="col-lg-4 photo-bg"></div>
             <div class="col-lg-8 card">
                 <h1>风萧萧兮，白露未晞</h1>
-                <p>Hello 各位好，我是你们的老朋友<b>官仁有话说</b>,希望在接下来的日子里，我们都能够变得更强。 </p>
+                <p>Hello 各位好，我是你们的老朋友<b>官仁有话说</b>，希望在接下来的日子里，我们都能够变得更强。 </p>
                 <p>苦难没有认清，爱也没有学会；<br>Hope you still love life after you know a lot .<br>希望你懂得很多之后，依旧热爱生活（｡ӧ◡ӧ｡）
                 </p>
 
