--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
             <div class="col-lg-4 photo-bg"></div>
             <div class="col-lg-8 card">
                 <h1>风萧萧兮，白露未晞</h1>
-                <p>Hello 各位好，我是你们的老朋友<b>官仁有话说</b>，希望在接下来的日子里，我们都能够变得更强。 </p>
+                <p>Hello 各位好，我是你们的老朋友<b>Shaw</b>，希望在接下来的日子里，我们都能够变得更强。 </p>
                 <p>苦难没有认清，爱也没有学会；<br>Hope you still love life after you know a lot .<br>希望你懂得很多之后，依旧热爱生活（｡ӧ◡ӧ｡）
                 </p>
 
                 <p>Just Go Go ···</p>
                 <div class="row">
                     <button id="kaygb-blog" class="btn btn-primary col-lg-4">首页</button>
-                    <a href="https://www.uycool.com" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">首页</a>
-                    <a href="https://uycool.com" target="_blank" class="btn btn-secondary col-lg-4">个站</a>
+                    <a href="https://uycool.com" id="kaygb-blog-a" target="_blank" class="btn btn-primary col-lg-4">首页</a>
+                    <a href="https://flowus.cn/cdui/share/e6138a30-5277-4207-a9dc-cef362981390" target="_blank" class="btn btn-secondary col-lg-4">博文</a>
                     <a href="http://mail.qq.com/cgi-bin/qm_share?t=qm_mailme&email=uycool@qq.com" target="_blank" id="kaygb-mail-a" class="btn btn-success col-lg-4">邮箱</a>
                     <button id="kaygb-mail" class="btn btn-success col-lg-4">邮箱</button>
                 </div>
@@ -36,7 +36,7 @@
                 <h4 class="mt-4">这里也能找到我</h4>
                 <ul class="social mt-1">
                     <li><a href="tencent://message/?uin=458091312&Site=uycool.com&Menu=yes" target="blank"><i class="fab fa-qq" aria-hidden="true"></i></a></li>
-                    <li><a href="http://sdbao.typecho.space" target="blank"><i class="fab fa-weixin" aria-hidden="true"></i></a></li>
+                    <li><a href="https://flowus.cn/cdui/share/75133b3b-7fa3-4843-a5a5-c5a143579eb3" target="blank"><i class="fab fa-weixin" aria-hidden="true"></i></a></li>
                     <li><a href="https://github.com/iguanren" target="blank"><i class="fab fa-github" aria-hidden="true"></i></a></li>
                     <li><a href="https://500px.com.cn/uycool" target="blank"><i class="fab fa-500px" aria-hidden="true"></i></a></li>
                 </ul>
